# simple-mailer

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.md  mypy.ini  pyproject.toml  setup.py
docker/: Dockerfile
src/simple_mailer/: captcha.py  checks.py  config.py  constants.py  dispatcher.py  exceptions.py  http.py  mailer.py  utils.py  web.py
src/simple_mailer/templates/: default.txt
src/simple_mailer/tests/: conftest.py  fixtures.py  helpers.py  test_captcha.py  test_config.py  test_dispatcher.py  test_mailer.py  test_utils.py  test_web.py
src/simple_mailer/tests/fixtures/: smtpd.py
wsgi/: passenger_wsgi.py
