[tool.poetry]
name = "simple-mailer"
version = "0.9.2"
description = ""
authors = ["Rigel <zedr@zedr.com>"]

[tool.poetry.dependencies]
python = "^3.7"
bottle = "^0.12.18"
lxml = "^4.5.0"
jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
webtest = "^2.0.34"
flake8 = "^3.7.9"
mypy = "^0.770"
black = "^19.10b0"
wheel = "^0.34.2"

[tool.black]
line-length = 79
target-version = ['py37']

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
