[tool.poetry]
name = "simple-mailer"
version = "1.1.1"
description = "A simple mailer"
authors = ["Rigel Di Scala <zedr@zedr.com>"]

[tool.poetry.dependencies]
python = "^3.7"
bottle = "^0.12.20"
lxml = "^4.9.1"
jinja2 = "^2.11.3"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
webtest = "^2.0.34"
flake8 = "^3.7.9"
mypy = "^0.770"
black = "^19.10b0"
wheel = "^0.34.2"

[tool.black]
line-length = 79
target-version = ['py37']

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
